--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -4,12 +4,12 @@
 
 <p>{{ site.owner.bio }}</p>
 
-{% if site.owner.location%}<p style="text-indent:0;"></i>{{ site.owner.Location }}</a></p>{% endif %}
+{% if site.owner.location%}<p style="text-indent:0;"></i>{{ site.owner.location }}</a></p>{% endif %}
 
 {% if site.owner.email %}<p style="text-indent:0;"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
 
 {% if site.owner.researchgate %}<p style="text-indent:0;"><a href="{{ site.owner.researchgate}}"><img src="https://caihanlin.com/images/logo/icons8-rg.png" width="15" height="15"></i> ResearchGate</a></p>{% endif %}
 
-{% if site.owner.orcid %}<p style="text-indent:0;"><a href="{{ site.owner.orcid}}"><img src="{{ site.url }}/images/logo/orcid.jpg" width="15" height="15"></i> ORCiD</a></p>{% endif %}
+{% if site.owner.orcid %}<p style="text-indent:0;"><a href="{{ site.owner.orcid}}"><img src="{{ site.url }}/images/logo/ORCID.png" width="15" height="15"></i> ORCiD</a></p>{% endif %}
 
 {% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><img src="https://caihanlin.com/images/logo/icons8-cv-100.png" width="15" height="15"></i> My CV</a></p>{% endif %}
